<resources>
    <string name="app_name">converter1</string>
    <string name="EYD">Enter Your Date Of Birth</string>
    <string name="SlectConv">Please Select your Converter Type By Menu </string>
    <string name="GtoJ">Gregorian to Jilli</string>
    <string name="GJ">gregorian to jilli</string>
    <string name="JG"> jilli to gregorian</string>
    <string name="YD">Your Date</string>
    <string name="item1">Jilli To Gregorian</string>
    <string name="item2">Gregorian To Jilli</string>
    <string name="convert1">Convert</string>
</resources>
